refactor: 깃헙에서 태그 가져올 때 소문자로 변환되도록 리팩토링